--- a/src/style.css
+++ b/src/style.css
@@ -31,28 +31,37 @@ h1 {
   margin-top: 0;
 }
 
+.form-field::placeholder {
+  color: whitesmoke;
+  opacity: 1;
+}
+
 .form-field {
   width: 100%;
-  display: block;
   margin-bottom: 10px;
+}
+
+.form-field:focus {
+  background-color: whitesmoke;
+  color: #5d8394;
+}
+
+.form-field,
+.button--submit {
+  display: block;
   padding: 5px;
   border: 1px solid #5d8394;
   border-radius: 5px;
-  color: white;
+  color: whitesmoke;
   background-color: #5d8394;
-}
-
-.form-field::placeholder {
-  color: white;
-  opacity: 1;
 }
 
 .button--submit {
   display: block;
   margin: 20px auto 0 auto;
-  color: white;
-  background-color: #5d8394;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid #5d8394;
+}
+
+.button--submit:hover,
+.button--submit:active {
+  background-color: #426575;
 }
